--- a/src/main/resources/NewListing.fxml
+++ b/src/main/resources/NewListing.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-
 <StackPane fx:id="contentArea" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.NewListing">
    <children>
       <BorderPane prefHeight="454.0" prefWidth="583.0" style="-fx-background-color: #D1E4F9; -fx-border-color: #D1E4F9;">
@@ -25,21 +24,22 @@
             <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
                <children>
                   <Label layoutX="38.0" layoutY="42.0" text="Make" />
-                  <TextField layoutX="77.0" layoutY="38.0" prefHeight="25.0" prefWidth="93.0" />
+                  <TextField fx:id="make" layoutX="77.0" layoutY="38.0" prefHeight="25.0" prefWidth="93.0" />
                   <Label layoutX="35.0" layoutY="243.0" text="Notes" />
-                  <TextArea layoutX="90.0" layoutY="177.0" prefHeight="149.0" prefWidth="440.0" wrapText="true" />
+                  <TextArea fx:id="notes" layoutX="90.0" layoutY="177.0" prefHeight="149.0" prefWidth="440.0" promptText="Must include price/day" wrapText="true" />
                   <JFXButton buttonType="RAISED" layoutX="489.0" layoutY="381.0" onMouseClicked="#addCar" prefHeight="25.0" prefWidth="78.0" style="-fx-background-color: #D1E4F9;" text="Add" />
                   <JFXButton fx:id="switchToHome" buttonType="RAISED" layoutX="14.0" layoutY="381.0" onMouseClicked="#home" prefHeight="25.0" prefWidth="78.0" style="-fx-background-color: #D1E4F9;" text="Cancel" />
                   <Label layoutX="219.0" layoutY="42.0" text="Model" />
-                  <TextField layoutX="270.0" layoutY="38.0" prefHeight="25.0" prefWidth="93.0" />
+                  <TextField fx:id="model" layoutX="270.0" layoutY="38.0" prefHeight="25.0" prefWidth="93.0" />
                   <Label layoutX="406.0" layoutY="42.0" text="Year" />
-                  <TextField layoutX="443.0" layoutY="38.0" prefHeight="25.0" prefWidth="93.0" />
+                  <TextField fx:id="year" layoutX="443.0" layoutY="38.0" prefHeight="25.0" prefWidth="93.0" />
                   <Label layoutX="32.0" layoutY="109.0" text="Mileage" />
-                  <TextField layoutX="77.0" layoutY="105.0" prefHeight="25.0" prefWidth="93.0" />
+                  <TextField fx:id="mileage" layoutX="77.0" layoutY="105.0" prefHeight="25.0" prefWidth="93.0" />
                   <Label layoutX="200.0" layoutY="109.0" text="Cub. Capacity" />
                   <Label layoutX="407.0" layoutY="109.0" text="Fuel" />
-                  <TextField layoutX="282.0" layoutY="105.0" prefHeight="25.0" prefWidth="69.0" />
-                  <TextField layoutX="443.0" layoutY="105.0" prefHeight="25.0" prefWidth="93.0" />
+                  <TextField fx:id="cmc" layoutX="282.0" layoutY="105.0" prefHeight="25.0" prefWidth="69.0" />
+                  <TextField fx:id="fuel" layoutX="443.0" layoutY="105.0" prefHeight="25.0" prefWidth="93.0" />
+                  <Text fx:id="listingText" layoutX="90.0" layoutY="347.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="439.13671875" />
                </children>
             </Pane>
          </center>
