--- a/src/main/resources/ClientProfile.fxml
+++ b/src/main/resources/ClientProfile.fxml
@@ -1,13 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<Pane prefHeight="211.0" prefWidth="238.0" style="-fx-background-color: yellow;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.ClientProfile">
+<StackPane fx:id="contentArea" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.ClientProfile">
     <children>
-
-        <Label alignment="CENTER" layoutX="87.0" layoutY="89.0" text="ClientProfile">
-        </Label>
-
+        <BorderPane prefHeight="454.0" prefWidth="583.0" style="-fx-background-color: #D1E4F9; -fx-border-color: #D1E4F9;">
+            <top>
+                <Pane prefHeight="32.0" prefWidth="581.0" style="-fx-background-color: #D1E4F9;" BorderPane.alignment="CENTER">
+                    <children>
+                        <Label layoutX="14.0" layoutY="7.0" text="My Profile">
+                            <font>
+                                <Font name="System Bold" size="14.0" />
+                            </font>
+                        </Label>
+                        <FlowPane hgap="5.0" layoutX="559.0" layoutY="10.0" prefHeight="17.0" prefWidth="17.0" />
+                    </children>
+                </Pane>
+            </top>
+            <center>
+                <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+                    <children>
+                        <ImageView fitHeight="89.0" fitWidth="250.0" layoutX="197.0" layoutY="341.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@Images/logo_lightblue.PNG" />
+                            </image>
+                        </ImageView>
+                        <Label layoutX="365.0" layoutY="10.0" prefHeight="20.0" prefWidth="69.0" text="Last name">
+                            <font>
+                                <Font size="14.0" />
+                            </font>
+                        </Label>
+                        <Label layoutX="186.0" layoutY="10.0" prefHeight="20.0" prefWidth="69.0" text="First name">
+                            <font>
+                                <Font size="14.0" />
+                            </font></Label>
+                        <TextField editable="false" layoutX="185.0" layoutY="35.0" prefHeight="25.0" prefWidth="93.0" text="Rares" />
+                        <ImageView fitHeight="156.0" fitWidth="146.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@Images/user.jpg" />
+                            </image>
+                        </ImageView>
+                        <TextField editable="false" layoutX="367.0" layoutY="35.0" prefHeight="25.0" prefWidth="93.0" text="Mladin" />
+                        <Label layoutX="304.0" layoutY="140.0" prefHeight="20.0" prefWidth="43.0" text="Email">
+                            <font>
+                                <Font size="14.0" />
+                            </font>
+                        </Label>
+                        <TextField alignment="CENTER" editable="false" layoutX="238.0" layoutY="165.0" prefHeight="25.0" prefWidth="167.0" text="rares.mladin@gmail.com" />
+                        <Label layoutX="184.0" layoutY="75.0" prefHeight="20.0" prefWidth="96.0" text="Phone number">
+                            <font>
+                                <Font size="14.0" />
+                            </font>
+                        </Label>
+                        <TextField editable="false" layoutX="186.0" layoutY="100.0" prefHeight="25.0" prefWidth="93.0" text="0743556344" />
+                        <Label layoutX="365.0" layoutY="75.0" prefHeight="20.0" prefWidth="96.0" text="Birth date">
+                            <font>
+                                <Font size="14.0" />
+                            </font>
+                        </Label>
+                        <TextField editable="false" layoutX="365.0" layoutY="100.0" prefHeight="25.0" prefWidth="93.0" />
+                        <Label layoutX="16.0" layoutY="140.0" prefHeight="20.0" prefWidth="121.0" text="Completed rentals">
+                            <font>
+                                <Font size="14.0" />
+                            </font>
+                        </Label>
+                        <TextField editable="false" layoutX="34.0" layoutY="165.0" prefHeight="25.0" prefWidth="86.0" />
+                        <JFXButton fx:id="deleteAccount" buttonType="RAISED" layoutX="17.0" layoutY="364.0" prefHeight="33.0" prefWidth="118.0" style="-fx-background-color: #D1E4F9; -fx-background-radius: 50px;" text="Delete account">
+                            <font>
+                                <Font size="14.0" />
+                            </font>
+                        </JFXButton>
+                    </children>
+                </Pane>
+            </center>
+        </BorderPane>
     </children>
-</Pane>
+</StackPane>
