--- a/src/main/resources/cars.fxml
+++ b/src/main/resources/cars.fxml
@@ -1,10 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<Pane prefHeight="211.0" prefWidth="238.0" style="-fx-background-color: green;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.Cars">
-    <children>
-        <Label alignment="CENTER" layoutX="100.0" layoutY="89.0" prefHeight="16.0" prefWidth="39.0" text="Cars"> </Label>
-    </children>
-</Pane>
+<StackPane prefHeight="454.0" prefWidth="583.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.Cars">
+   <children>
+        <BorderPane prefHeight="200.0" prefWidth="200.0">
+            <top>
+                <Pane prefHeight="32.0" prefWidth="581.0" style="-fx-background-color: #D1E4F9;" BorderPane.alignment="CENTER">
+                    <children>
+                        <Label layoutX="14.0" layoutY="7.0" text="Rent-a-car">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font></Label>
+                        <FlowPane hgap="5.0" layoutX="559.0" layoutY="10.0" prefHeight="17.0" prefWidth="17.0" />
+                    </children>
+                </Pane>
+            </top>
+        </BorderPane>
+   </children>
+</StackPane>
