--- a/src/main/resources/ProviderProfile.fxml
+++ b/src/main/resources/ProviderProfile.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<StackPane fx:id="contentArea" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.ProviderProfile">
+<StackPane fx:id="contentArea" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.ProviderProfileController">
     <children>
         <BorderPane prefHeight="454.0" prefWidth="583.0" style="-fx-background-color: #D1E4F9; -fx-border-color: #D1E4F9;">
             <top>
@@ -38,55 +38,49 @@
                      <font>
                         <Font size="14.0" />
                      </font></Label>
-                        <TextField editable="false" layoutX="185.0" layoutY="35.0" prefHeight="25.0" prefWidth="93.0" text="Rares" />
+                        <TextField fx:id="fName" editable="false" layoutX="185.0" layoutY="35.0" prefHeight="25.0" prefWidth="93.0" text="Rares" />
                   <ImageView fitHeight="156.0" fitWidth="146.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@Images/user.jpg" />
                      </image>
                   </ImageView>
-                  <TextField editable="false" layoutX="367.0" layoutY="35.0" prefHeight="25.0" prefWidth="93.0" text="Mladin" />
+                  <TextField fx:id="lName" editable="false" layoutX="367.0" layoutY="35.0" prefHeight="25.0" prefWidth="93.0" text="Mladin" />
                   <Label layoutX="304.0" layoutY="140.0" prefHeight="20.0" prefWidth="43.0" text="Email">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField alignment="CENTER" editable="false" layoutX="238.0" layoutY="165.0" prefHeight="25.0" prefWidth="167.0" text="rares.mladin@gmail.com" />
+                  <TextField fx:id="email" alignment="CENTER" editable="false" layoutX="238.0" layoutY="165.0" prefHeight="25.0" prefWidth="167.0" text="rares.mladin@gmail.com" />
                   <Label layoutX="184.0" layoutY="75.0" prefHeight="20.0" prefWidth="96.0" text="Phone number">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField editable="false" layoutX="186.0" layoutY="100.0" prefHeight="25.0" prefWidth="93.0" text="0743556344" />
+                  <TextField fx:id="phoneNo" editable="false" layoutX="186.0" layoutY="100.0" prefHeight="25.0" prefWidth="93.0" text="0743556344" />
                   <Label layoutX="365.0" layoutY="75.0" prefHeight="20.0" prefWidth="96.0" text="Birth date">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField editable="false" layoutX="365.0" layoutY="100.0" prefHeight="25.0" prefWidth="93.0" />
+                  <TextField fx:id="bDate" editable="false" layoutX="365.0" layoutY="100.0" prefHeight="25.0" prefWidth="93.0" />
                   <Label layoutX="186.0" layoutY="205.0" prefHeight="20.0" prefWidth="69.0" text="Company">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField editable="false" layoutX="185.0" layoutY="230.0" prefHeight="25.0" prefWidth="93.0" text="Shelby Ltd." />
-                  <TextField editable="false" layoutX="365.0" layoutY="230.0" prefHeight="25.0" prefWidth="93.0" />
+                  <TextField fx:id="company" editable="false" layoutX="185.0" layoutY="230.0" prefHeight="25.0" prefWidth="93.0" text="Shelby Ltd." />
+                  <TextField fx:id="address" editable="false" layoutX="365.0" layoutY="230.0" prefHeight="25.0" prefWidth="93.0" />
                   <Label layoutX="365.0" layoutY="205.0" prefHeight="20.0" prefWidth="69.0" text="Address">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="186.0" layoutY="270.0" prefHeight="20.0" prefWidth="129.0" text="Tax registration no.">
+                  <Label layoutX="261.0" layoutY="270.0" prefHeight="20.0" prefWidth="129.0" text="Tax registration no.">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="365.0" layoutY="270.0" prefHeight="20.0" prefWidth="139.0" text="Company phone no.">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextField editable="false" layoutX="186.0" layoutY="295.0" prefHeight="25.0" prefWidth="93.0" text="1234567890" />
-                  <TextField editable="false" layoutX="365.0" layoutY="295.0" prefHeight="25.0" prefWidth="93.0" text="0743556344" />
+                  <TextField fx:id="taxRegNo" editable="false" layoutX="275.0" layoutY="295.0" prefHeight="25.0" prefWidth="93.0" text="1234567890" />
                   <Label layoutX="21.0" layoutY="140.0" prefHeight="20.0" prefWidth="110.0" text="Ongoing rentals">
                      <font>
                         <Font size="14.0" />
@@ -97,14 +91,14 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField editable="false" layoutX="30.0" layoutY="165.0" prefHeight="25.0" prefWidth="86.0" />
-                  <TextField editable="false" layoutX="30.0" layoutY="230.0" prefHeight="25.0" prefWidth="86.0" />
+                  <TextField fx:id="activeListings" editable="false" layoutX="30.0" layoutY="165.0" prefHeight="25.0" prefWidth="86.0" />
+                  <TextField fx:id="inactiveListings" editable="false" layoutX="30.0" layoutY="230.0" prefHeight="25.0" prefWidth="86.0" />
                   <Label layoutX="30.0" layoutY="270.0" prefHeight="20.0" prefWidth="93.0" text="Overall rating">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField editable="false" layoutX="30.0" layoutY="295.0" prefHeight="25.0" prefWidth="86.0" />
+                  <TextField fx:id="feedbackScore" editable="false" layoutX="30.0" layoutY="295.0" prefHeight="25.0" prefWidth="86.0" />
                         <JFXButton fx:id="deleteAccount" buttonType="RAISED" layoutX="17.0" layoutY="364.0" prefHeight="33.0" prefWidth="118.0" style="-fx-background-color: #D1E4F9; -fx-background-radius: 50px;" text="Delete account">
                      <font>
                         <Font size="14.0" />
