--- a/src/main/resources/ProviderProfile.fxml
+++ b/src/main/resources/ProviderProfile.fxml
@@ -38,25 +38,25 @@
                      <font>
                         <Font size="14.0" />
                      </font></Label>
-                        <TextField fx:id="fName" editable="false" layoutX="185.0" layoutY="35.0" prefHeight="25.0" prefWidth="93.0" text="Rares" />
+                        <TextField fx:id="fName" editable="false" layoutX="185.0" layoutY="35.0" prefHeight="25.0" prefWidth="93.0" />
                   <ImageView fitHeight="156.0" fitWidth="146.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@Images/user.jpg" />
                      </image>
                   </ImageView>
-                  <TextField fx:id="lName" editable="false" layoutX="367.0" layoutY="35.0" prefHeight="25.0" prefWidth="93.0" text="Mladin" />
+                  <TextField fx:id="lName" editable="false" layoutX="367.0" layoutY="35.0" prefHeight="25.0" prefWidth="93.0" />
                   <Label layoutX="304.0" layoutY="140.0" prefHeight="20.0" prefWidth="43.0" text="Email">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="email" alignment="CENTER" editable="false" layoutX="238.0" layoutY="165.0" prefHeight="25.0" prefWidth="167.0" text="rares.mladin@gmail.com" />
+                  <TextField fx:id="email" alignment="CENTER" editable="false" layoutX="238.0" layoutY="165.0" prefHeight="25.0" prefWidth="167.0" />
                   <Label layoutX="184.0" layoutY="75.0" prefHeight="20.0" prefWidth="96.0" text="Phone number">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="phoneNo" editable="false" layoutX="186.0" layoutY="100.0" prefHeight="25.0" prefWidth="93.0" text="0743556344" />
+                  <TextField fx:id="phoneNo" editable="false" layoutX="186.0" layoutY="100.0" prefHeight="25.0" prefWidth="93.0" />
                   <Label layoutX="365.0" layoutY="75.0" prefHeight="20.0" prefWidth="96.0" text="Birth date">
                      <font>
                         <Font size="14.0" />
@@ -68,7 +68,7 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="company" editable="false" layoutX="185.0" layoutY="230.0" prefHeight="25.0" prefWidth="93.0" text="Shelby Ltd." />
+                  <TextField fx:id="company" editable="false" layoutX="185.0" layoutY="230.0" prefHeight="25.0" prefWidth="93.0" />
                   <TextField fx:id="address" editable="false" layoutX="365.0" layoutY="230.0" prefHeight="25.0" prefWidth="93.0" />
                   <Label layoutX="365.0" layoutY="205.0" prefHeight="20.0" prefWidth="69.0" text="Address">
                      <font>
@@ -80,7 +80,7 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="taxRegNo" editable="false" layoutX="275.0" layoutY="295.0" prefHeight="25.0" prefWidth="93.0" text="1234567890" />
+                  <TextField fx:id="taxRegNo" editable="false" layoutX="275.0" layoutY="295.0" prefHeight="25.0" prefWidth="93.0" />
                   <Label layoutX="21.0" layoutY="140.0" prefHeight="20.0" prefWidth="110.0" text="Ongoing rentals">
                      <font>
                         <Font size="14.0" />
