--- a/src/main/resources/HomeClient.fxml
+++ b/src/main/resources/HomeClient.fxml
@@ -68,14 +68,14 @@
                                 <Image url="@Images/menu1.png" />
                             </image>
                         </ImageView>
+                        <ImageView fitHeight="46.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@Images/modify1.png" />
+                            </image>
+                        </ImageView>
                         <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@Images/user.jpg" />
-                            </image>
-                        </ImageView>
-                        <ImageView fitHeight="46.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@Images/settings1.jpg" />
                             </image>
                         </ImageView>
                         <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
@@ -101,12 +101,12 @@
                                 <Font size="16.0" />
                             </font>
                         </JFXButton>
-                        <JFXButton alignment="BASELINE_LEFT" onMouseClicked="#ClientProfile" prefHeight="38.0" prefWidth="179.0" text="My Profile">
+                        <JFXButton alignment="BASELINE_LEFT" onMouseClicked="#ActiveListing" prefHeight="38.0" prefWidth="179.0" text="Manage Rentals">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </JFXButton>
-                        <JFXButton alignment="BASELINE_LEFT" onMouseClicked="#AppSettings" prefHeight="38.0" prefWidth="179.0" text="Settings">
+                        <JFXButton alignment="BASELINE_LEFT" onMouseClicked="#ClientProfile" prefHeight="38.0" prefWidth="179.0" text="My Profile">
                             <font>
                                 <Font size="16.0" />
                             </font>
