--- a/src/main/resources/HomeProvider.fxml
+++ b/src/main/resources/HomeProvider.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.ProviderMenuController"> <!--xmlns="http://javafx.com/javafx/16"-->
+<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.ProviderMenuController"> <!--xmlns="http://javafx.com/javafx/16"-->
    <children>
       <AnchorPane prefHeight="46.0" prefWidth="200.0" style="-fx-background-color: #002d40;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
@@ -83,11 +86,6 @@
                         <Image url="@Images/user.jpg" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="46.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@Images/settings1.jpg" />
-                     </image>
-                  </ImageView>
                   <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
                      <image>
                         <Image url="@Images/logout1.jpg" />
@@ -117,11 +115,6 @@
                      </font>
                   </JFXButton>
                   <JFXButton alignment="BASELINE_LEFT" onMouseClicked="#ProviderProfile" prefHeight="38.0" prefWidth="179.0" text="My Profile">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </JFXButton>
-                  <JFXButton alignment="BASELINE_LEFT" onMouseClicked="#AppSettings" prefHeight="38.0" prefWidth="179.0" text="Settings">
                      <font>
                         <Font size="16.0" />
                      </font>
