--- a/src/main/resources/MyListings.fxml
+++ b/src/main/resources/MyListings.fxml
@@ -2,9 +2,25 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<Pane prefHeight="211.0" prefWidth="238.0" style="-fx-background-color: green;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.MyListings">
+<StackPane prefHeight="454.0" prefWidth="583.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.MyListingsController">
     <children>
-        <Label alignment="CENTER" layoutX="81.0" layoutY="97.0" prefHeight="17.0" prefWidth="76.0" text="MyListings"> </Label>
+        <BorderPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;">
+            <top>
+                <Pane prefHeight="32.0" prefWidth="581.0" style="-fx-background-color: #D1E4F9;" BorderPane.alignment="CENTER">
+                    <children>
+                        <Label layoutX="14.0" layoutY="7.0" text="My listings">
+                            <font>
+                                <Font name="System Bold" size="14.0" />
+                            </font></Label>
+                        <FlowPane hgap="5.0" layoutX="559.0" layoutY="10.0" prefHeight="17.0" prefWidth="17.0" />
+                    </children>
+                </Pane>
+            </top>
+            <center>
+                <ListView fx:id="carList" prefHeight="200.0" prefWidth="560.0" BorderPane.alignment="CENTER" />
+            </center>
+        </BorderPane>
     </children>
-</Pane>
+</StackPane>
