--- a/src/main/resources/HomeClient.fxml
+++ b/src/main/resources/HomeClient.fxml
@@ -36,12 +36,12 @@
                         </ImageView>
                         <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@Images/user.jpg" />
+                                <Image url="@Images/modify1.png" />
                             </image>
                         </ImageView>
                         <ImageView fitHeight="46.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@Images/settings1.jpg" />
+                                <Image url="@Images/user.jpg" />
                             </image>
                         </ImageView>
                         <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
